force-app/main/default/objects/SurveyRequest__c/SurveyRequest__c.object-meta.xml
<CustomObject>
    <description>EOC Survey Requests, this object is used for failed EOC survey request re-sending</description>
    <label>Survey Request</label>
    <nameField>
        <displayFormat>SR-{0000000}</displayFormat>
        <label>Survey Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>