force-app/main/default/objects/SurveyRequest__c/fields/Job__c.field-meta.xml
<CustomField>
    <fullName>Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>SurveyRequest__c</referenceTo>
    <relationshipLabel>SurveyRequests</relationshipLabel>
    <relationshipName>SurveyRequestsPerJob</relationshipName>
    <type>Lookup</type>
</CustomField>