force-app/main/default/objects/SurveyRequest__c/fields/JobId__c.field-meta.xml
<CustomField>
    <fullName>JobId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>