force-app/main/default/objects/SurveyRequest__c/fields/ParentLogId__c.field-meta.xml
<CustomField>
    <fullName>ParentLogId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Parent Log Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>