force-app/main/default/objects/SurveyRequest__c/fields/PolicyIssuingGroup__c.field-meta.xml
<CustomField>
    <fullName>PolicyIssuingGroup__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Policy Issuing Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>