force-app/main/default/objects/SurveyRequest__c/fields/SurveyIndicators__c.field-meta.xml
<CustomField>
    <fullName>SurveyIndicators__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Survey Indicators</label>
    <length>255</length>
    <type>Text</type>
</CustomField>