force-app/main/default/objects/SurveyRequest__c/fields/SurveyJobStatus__c.field-meta.xml
<CustomField>
    <fullName>SurveyJobStatus__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Survey Job Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>