force-app/main/default/objects/SurveyRequest__c/fields/TotalLoss__c.field-meta.xml
<CustomField>
    <fullName>TotalLoss__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Total Loss</label>
    <length>255</length>
    <type>Text</type>
</CustomField>