force-app/main/default/objects/SurveyRequest__c/recordTypes/SurveyJob.recordType-meta.xml
<RecordType>
    <fullName>SurveyJob</fullName>
    <active>true</active>
    <label>Survey Job</label>
</RecordType>