force-app/main/default/objects/SurveyRequest__c/recordTypes/SurveyRequest.recordType-meta.xml
<RecordType>
    <fullName>SurveyRequest</fullName>
    <active>true</active>
    <label>Survey Request</label>
</RecordType>