force-app/main/default/objects/SurveyRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>JobId__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>ParentLogId__c</columns>
    <columns>PolicyIssuingGroup__c</columns>
    <columns>SurveyIndicators__c</columns>
    <columns>SurveyJobStatus__c</columns>
    <columns>TotalLoss__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>